--- a/app/src/main/res/layout/item_jadwal.xml
+++ b/app/src/main/res/layout/item_jadwal.xml
@@ -25,22 +25,22 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
 
-            android:layout_width="387dp"
-            android:layout_height="193dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             tools:layout_editor_absoluteX="-14dp"
 
             tools:layout_editor_absoluteY="-8dp">
 
             <TextView
                 android:id="@+id/tvJudulJadwal"
-                android:layout_width="wrap_content"
-                android:layout_height="18dp"
-
+                android:layout_width="97dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="4dp"
                 android:text="matematika"
                 android:textColor="@android:color/white"
+                android:textSize="17dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
@@ -48,14 +48,15 @@
                 android:id="@+id/tvDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="32dp"
+                android:layout_marginRight="32dp"
                 android:text="20 januari 2020"
                 android:textColor="@android:color/white"
+                android:textSize="17dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.886"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.103" />
+                app:layout_constraintVertical_bias="0.092" />
 
             <ImageButton
                 android:id="@+id/imageButton"
@@ -89,16 +90,18 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
-
                 android:padding="5dp"
-                android:text="membuat sebuah algoritma"
 
+                android:text="membuat sebuah algoritma"
                 android:textColor="@android:color/white"
+
+                android:textSize="17dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView6" />
+                app:layout_constraintTop_toBottomOf="@+id/textView6"
+                app:layout_constraintVertical_bias="0.262" />
 
             <TextView
                 android:id="@+id/textView5"
@@ -109,38 +112,25 @@
                 android:layout_marginTop="16dp"
                 android:text="Mata Pelajaran : "
                 android:textColor="@android:color/primary_text_light_nodisable"
+                android:textSize="20dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/textView6"
-                android:layout_width="wrap_content"
+
+                android:layout_width="131dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="12dp"
                 android:text="Keterangan  : "
                 android:textColor="@android:color/primary_text_light_nodisable"
+                android:textSize="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvJudulJadwal" />
-
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="224dp"
-                android:layout_marginLeft="224dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:text="tanggal  :"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/tvDate"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.103" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
