--- a/app/src/main/res/layout/dialog_from_jadwal.xml
+++ b/app/src/main/res/layout/dialog_from_jadwal.xml
@@ -32,12 +32,12 @@
             android:id="@+id/editTextTextPersonName"
             android:layout_width="292dp"
             android:paddingLeft="15dp"
-            android:text="masuk"
+
             android:layout_height="39dp"
             android:layout_marginTop="108dp"
             android:background="@drawable/border_gray"
             android:ems="10"
-            android:hint="Name"
+            android:hint="Mata Pelajaran"
 
             android:padding="5dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -51,12 +51,12 @@
             android:layout_height="40dp"
             android:layout_marginTop="48dp"
             android:background="@drawable/border_gray"
-            android:hint="Name"
+            android:hint="Keterangan"
 
             android:inputType="textPersonName"
 
             android:paddingLeft="15sp"
-            android:text="masuk"
+
             app:layout_constraintEnd_toEndOf="parent"
 
             app:layout_constraintHorizontal_bias="0.242"
