--- a/app/src/main/res/layout/fragment_register1.xml
+++ b/app/src/main/res/layout/fragment_register1.xml
@@ -17,17 +17,18 @@
 
 
         <com.airbnb.lottie.LottieAnimationView
-            android:layout_width="213dp"
-            android:layout_height="223dp"
+            android:id="@+id/lottieAnimationView2"
+            android:layout_width="183dp"
 
+            android:layout_height="179dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
 
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.263"
 
+            app:layout_constraintVertical_bias="0.263"
             app:lottie_autoPlay="true"
             app:lottie_rawRes="@raw/login">
 
@@ -42,16 +43,16 @@
             android:layout_marginStart="32dp"
             android:layout_marginLeft="32dp"
 
-            android:layout_marginTop="292dp"
-            android:layout_marginEnd="32dp"
+            android:layout_marginTop="60dp"
 
+            android:layout_marginEnd="32dp"
             android:layout_marginRight="32dp"
             android:drawableStart="@drawable/ic_baseline_account_box_24"
             android:hint=" username"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvStep1"></EditText>
+            app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView2"></EditText>
 
         <EditText
             android:id="@+id/tvEmailRegister"
