--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,26 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
 
-    android:layout_height="match_parent"
-    android:padding="15dp"
+    android:layout_height="wrap_content"
+
     tools:context=".MainFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="608dp">
 
 
         <com.airbnb.lottie.LottieAnimationView
-            android:layout_width="242dp"
-            android:layout_height="249dp"
+            android:id="@+id/lottieAnimationView3"
+            android:layout_width="258dp"
+            android:layout_height="266dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
 
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.087"
-            app:lottie_autoPlay="true"
 
+            app:lottie_autoPlay="true"
             app:lottie_rawRes="@raw/login">
 
 
@@ -35,17 +36,19 @@
             android:layout_height="50dp"
             android:layout_marginStart="32dp"
 
+            android:textStyle="italic"
             android:layout_marginLeft="32dp"
-            android:layout_marginTop="236dp"
             android:layout_marginEnd="32dp"
             android:layout_marginRight="32dp"
             android:drawableStart="@drawable/ic_baseline_account_box_24"
             android:hint=" username"
 
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"></EditText>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.534"></EditText>
 
         <EditText
             android:id="@+id/tvPassword"
@@ -53,59 +56,65 @@
             android:layout_height="50dp"
             android:layout_marginStart="32dp"
             android:layout_marginLeft="32dp"
-            android:layout_marginTop="12dp"
             android:layout_marginEnd="32dp"
             android:layout_marginRight="32dp"
             android:drawableStart="@drawable/ic_baseline_enhanced_encryption_24"
-            android:hint=" password"
 
+            android:hint=" password"
             android:inputType="textPassword"
             android:textSize="15dp"
+
+
             android:textStyle="italic"
-
-
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvid" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.637" />
 
         <Button
             android:id="@+id/btnLogin"
             android:layout_width="300dp"
             android:layout_height="45dp"
 
-            android:layout_marginTop="52dp"
             android:background="@drawable/baground_botton"
             android:text="Log in"
             android:textColor="@android:color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvPassword" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.747" />
 
         <Button
             android:id="@+id/btnRegister"
             android:layout_width="300dp"
             android:layout_height="45dp"
-            android:layout_marginTop="24dp"
             android:background="@drawable/border_gray"
             android:text="Register"
             android:textColor="@android:color/holo_blue_dark"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.502"
+            app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.932" />
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
             android:text="-----------------------  or -----------------------"
 
             android:textSize="18dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.828" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
