--- a/app/src/main/res/layout/fragment_register1.xml
+++ b/app/src/main/res/layout/fragment_register1.xml
@@ -18,17 +18,17 @@
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/lottieAnimationView2"
-            android:layout_width="183dp"
+            android:layout_width="286dp"
 
-            android:layout_height="179dp"
+            android:layout_height="238dp"
             app:layout_constraintBottom_toBottomOf="parent"
 
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
 
-            app:layout_constraintVertical_bias="0.263"
+            app:layout_constraintVertical_bias="0.233"
             app:lottie_autoPlay="true"
             app:lottie_rawRes="@raw/login">
 
@@ -43,16 +43,16 @@
             android:layout_marginStart="32dp"
             android:layout_marginLeft="32dp"
 
-            android:layout_marginTop="60dp"
-
             android:layout_marginEnd="32dp"
             android:layout_marginRight="32dp"
             android:drawableStart="@drawable/ic_baseline_account_box_24"
             android:hint=" username"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView2"></EditText>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.572"></EditText>
 
         <EditText
             android:id="@+id/tvEmailRegister"
@@ -60,45 +60,47 @@
             android:layout_height="50dp"
             android:layout_marginStart="32dp"
             android:layout_marginLeft="32dp"
-            android:layout_marginTop="12dp"
             android:layout_marginEnd="32dp"
-            android:inputType="textEmailAddress"
-
             android:layout_marginRight="32dp"
+
             android:drawableStart="@drawable/ic_baseline_email_24"
             android:hint=" email"
+            android:inputType="textEmailAddress"
 
+
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvIdRegister" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.674" />
 
         <Button
             android:id="@+id/btnNext"
             android:layout_width="290dp"
             android:layout_height="50dp"
-            android:layout_marginTop="64dp"
             android:background="@drawable/baground_botton"
             android:text="Next"
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintHorizontal_bias="0.512"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvEmailRegister"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.801" />
 
         <TextView
             android:id="@+id/tvStep1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
             android:drawableStart="@drawable/ic_baseline_arrow_back_ios_24"
             android:text="Step 1"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.132"
+            app:layout_constraintHorizontal_bias="0.092"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.069" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
