--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,11 +14,7 @@
         <action
             android:id="@+id/action_mainFragment_to_register1Fragment"
             app:destination="@id/register1Fragment"
-            app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"
-            />
+            app:enterAnim="@anim/slide_in_right" />
         <action
             android:id="@+id/action_mainFragment_to_homeActivity"
             app:destination="@id/homeActivity"
@@ -43,7 +39,8 @@
         tools:layout="@layout/fragment_register1" >
         <action
             android:id="@+id/action_register1Fragment_to_register2Fragment"
-            app:destination="@id/register2Fragment" />
+            app:destination="@id/register2Fragment"
+            app:enterAnim="@anim/slide_in_right" />
     </fragment>
     <fragment
         android:id="@+id/register2Fragment"
@@ -52,7 +49,8 @@
         tools:layout="@layout/fragment_register2" >
         <action
             android:id="@+id/action_register2Fragment_to_resultFragment2"
-            app:destination="@id/resultFragment" />
+            app:destination="@id/resultFragment"
+            app:enterAnim="@anim/slide_in_right" />
     </fragment>
     <fragment
         android:id="@+id/resultFragment"
@@ -61,7 +59,8 @@
         tools:layout="@layout/fragment_result" >
         <action
             android:id="@+id/action_resultFragment_to_mainFragment"
-            app:destination="@id/mainFragment" />
+            app:destination="@id/mainFragment"
+            app:enterAnim="@anim/slide_in_right" />
     </fragment>
     <activity
         android:id="@+id/homeActivity"
