--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -2,15 +2,25 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Home.HomeActivity">
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="636dp"
+        android:layout_height="101dp"
+
+        android:background="@drawable/atas"
+        tools:layout_editor_absoluteX="-113dp"
+        tools:layout_editor_absoluteY="1dp" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/buttonNavigation"
         android:layout_width="0dp"
         app:menu="@menu/nav_botton"
+
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -19,32 +29,23 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
-    <TextView
-        android:id="@+id/tvname"
-        android:textSize="30dp"
-        android:textColor="@android:color/holo_blue_light"
-        android:layout_width="261dp"
-        android:layout_height="41dp"
-
-
-        android:layout_marginTop="36dp"
-        android:text="data"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.106"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <fragment
         android:id="@+id/nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="401dp"
+        android:layout_height="507dp"
+
+
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="24dp"
+
         app:defaultNavHost="true"
         app:layout_constraintBottom_toTopOf="@+id/buttonNavigation"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvname"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
         app:navGraph="@navigation/home_nav_graph" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
