--- a/app/src/main/res/layout/item_jadwal.xml
+++ b/app/src/main/res/layout/item_jadwal.xml
@@ -7,7 +7,7 @@
     android:padding="5dp"
 
 
-    app:cardBackgroundColor="@android:color/holo_blue_light"
+    app:cardBackgroundColor="@color/colorPrimary"
     app:cardCornerRadius="10dp"
 
     app:cardElevation="10dp">
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
 
 
-        app:cardBackgroundColor="@android:color/holo_blue_light"
+        app:cardBackgroundColor="@color/colorPrimary"
         app:cardCornerRadius="10dp"
 
         app:cardElevation="10dp">
@@ -34,16 +34,16 @@
             <TextView
                 android:id="@+id/tvJudulJadwal"
                 android:layout_width="224dp"
-                android:layout_height="39dp"
+                android:layout_height="45dp"
                 android:text="matematika"
                 android:textColor="@android:color/white"
-                android:textSize="17dp"
+                android:textSize="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.075"
+                app:layout_constraintHorizontal_bias="0.089"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.236" />
+                app:layout_constraintVertical_bias="0.278" />
 
             <TextView
                 android:id="@+id/tvDate"
@@ -68,7 +68,7 @@
                 app:layout_constraintHorizontal_bias="0.714"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.78"
+                app:layout_constraintVertical_bias="0.443"
                 app:srcCompat="@drawable/ic_baseline_create_24" />
 
             <ImageButton
@@ -77,16 +77,16 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.889"
+                app:layout_constraintHorizontal_bias="0.881"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.78"
+                app:layout_constraintVertical_bias="0.438"
                 app:srcCompat="@drawable/ic_baseline_delete_forever_24" />
 
             <TextView
                 android:id="@+id/tvKeterangan"
-                android:layout_width="196dp"
-                android:layout_height="93dp"
+                android:layout_width="330dp"
+                android:layout_height="80dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="16dp"
@@ -96,7 +96,8 @@
                 android:text="membuat sebuah algoritma"
                 android:textColor="@android:color/white"
 
-                android:textSize="17dp"
+                android:textSize="20dp"
+
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.039"
@@ -122,7 +123,7 @@
                 android:id="@+id/textView6"
 
                 android:layout_width="131dp"
-                android:layout_height="wrap_content"
+                android:layout_height="25dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
                 android:text="Keterangan  : "
@@ -130,10 +131,10 @@
                 android:textSize="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.019"
+                app:layout_constraintHorizontal_bias="0.03"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.41" />
+                app:layout_constraintVertical_bias="0.492" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
