--- a/app/src/main/res/layout/fragment_register1.xml
+++ b/app/src/main/res/layout/fragment_register1.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
 
     android:layout_height="match_parent"
-    tools:context=".Register1Fragment">
+    tools:context=".View.Fragment.Register1Fragment">
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.constraintlayout.widget.ConstraintLayout
