--- a/app/src/main/res/navigation/home_nav_graph.xml
+++ b/app/src/main/res/navigation/home_nav_graph.xml
@@ -21,7 +21,7 @@
     </fragment>
     <activity
         android:id="@+id/mainActivity"
-        android:name="com.example.register.MainActivity"
+        android:name="com.example.register.View.MainActivity"
         android:label="activity_main"
         tools:layout="@layout/activity_main" />
 </navigation>
