--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,14 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".Home.HomeActivity">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="636dp"
-        android:layout_height="101dp"
 
-        android:background="@drawable/atas"
-        tools:layout_editor_absoluteX="-113dp"
-        tools:layout_editor_absoluteY="1dp" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/buttonNavigation"
@@ -33,18 +26,17 @@
     <fragment
         android:id="@+id/nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="401dp"
-        android:layout_height="507dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
 
-
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="24dp"
 
         app:defaultNavHost="true"
         app:layout_constraintBottom_toTopOf="@+id/buttonNavigation"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+
+        app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/home_nav_graph" />
 
 
